fix: satisfy very small screens (no overflow of other keyboard left side) and increase the place where keyboard can fit (tested near 2000px width)

--- a/packages/uhk-web/src/app/components/svg/wrap/svg-keyboard-wrap.component.scss
+++ b/packages/uhk-web/src/app/components/svg/wrap/svg-keyboard-wrap.component.scss
@@ -10,7 +10,8 @@
 keyboard-slider {
     display: block;
     position: relative;
-    height: 500px;
+    overflow: hidden;
+    height: 1000px;
     margin-top: 30px;
 }
 
